# Yolov11-PPE-Construction

./: .gitignore  README.md  pyproject.toml  start.sh  test_api.py
src/: __init__.py  app_gradio.py  app_realtime.py  main.py  processing.py  ui.py  video_processing.py
train/: yolov11_ppe_construction.ipynb
